# DevBuddy

./: .gitignore  README.md  install.py  pyproject.toml  setup.py
devbuddy/: __init__.py  animations.py  cli.py  formatter.py  scaffolder.py
devbuddy/plugins/: __init__.py
devbuddy/plugins/example/: __init__.py
