# pyproject.toml
[project]
name = "z0roday-devbuddy"
version = "0.3.0"
description = "A powerful CLI tool to automate coding tasks by z0roday"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "z0roday", email = "contact@z0roday.dev"}
]
license = {text = "MIT"}
keywords = ["development", "cli", "tools", "automation", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "black>=23.0",
    "autopep8>=2.0",
    "yapf>=0.40.0",
    "isort>=5.12.0",
    "pytest>=7.0.0",
    "pylint>=2.17.0",
    "sphinx>=7.0.0",
    "requests>=2.25.0",
]

[project.scripts]
dbuddy = "devbuddy.cli:cli"

[project.optional-dependencies]
dev = [
    "build",
    "twine"
]

[project.urls]
"Homepage" = "https://github.com/z0roday/devbuddy"
"Bug Tracker" = "https://github.com/z0roday/devbuddy/issues"
"Documentation" = "https://github.com/z0roday/devbuddy/blob/main/README.md"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["devbuddy", "devbuddy.plugins"]